--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,195 +25,227 @@
     </style>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-text">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a class="nav-list" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="nav-list" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="nav-list" href="" target="_blank">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a class="contact-info" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-info" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-text">Studio</span></a
+          >
+          <ul class="ul-nav">
+            <li>
+              <a class="nav-list" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="nav-list" href="">Portfolio</a>
+            </li>
+            <li>
+              <a class="nav-list" href="" target="_blank">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="ul-address">
+            <li class="contact-item">
+              <a class="contact-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
-        <button class="custom-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-text">Effective Solutions for Your Business</h1>
+          <button class="custom-button" type="button">Order Service</button>
+        </div>
       </section>
-      <section>
-        <h2 class="features-header">About Us</h2>
-        <ul>
-          <li>
-            <h3 class="features-list">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="features">
+        <div class="container">
+          <h2 class="features-header">About Us</h2>
+          <ul class="ul-features">
+            <li>
+              <h3 class="features-list">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-list">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-list">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-list">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team-section">
-        <h2 class="team-header">Our Team</h2>
-        <ul>
-          <li class="team">
-            <img
-              src="./images/MarkGuerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team">
-            <img
-              src="./images/TomFord.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team">
-            <img
-              src="./images/CamilaGarcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team">
-            <img
-              src="./images/DanielWilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-header">Our Team</h2>
+          <ul class="ul-team">
+            <li class="team">
+              <img
+                src="./images/MarkGuerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-desc">
+                <h3 class="team-list">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team">
+              <img
+                src="./images/TomFord.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-desc">
+                <h3 class="team-list">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team">
+              <img
+                src="./images/CamilaGarcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-desc">
+                <h3 class="team-list">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team">
+              <img
+                src="./images/DanielWilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-desc">
+                <h3 class="team-list">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="portfolio-header">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/banking-app.jpg"
-              alt="banking-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="taxi-service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="screen-illustration"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="online-courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio-section">
+        <div class="container">
+          <h2 class="portfolio-header">Our Portfolio</h2>
+          <ul class="ul-portfolio">
+            <li class="portfolio-item">
+              <img
+                src="./images/banking-app.jpg"
+                alt="banking-app"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-desc">
+                <h3 class="portfolio-list">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-desc">
+                <h3 class="portfolio-list">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-desc">
+                <h3 class="portfolio-list">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/taxi-service.jpg"
+                alt="taxi-service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-desc">
+                <h3 class="portfolio-list">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="screen-illustration"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-desc">
+                <h3 class="portfolio-list">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/online-courses.jpg"
+                alt="online-courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-desc">
+                <h3 class="portfolio-list">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="site-footer">
-      <a href="./index.html" class="logo-footer"
-        >Web<span class="logo-text-footer">Studio</span></a
-      >
-      <p class="quote-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo-footer"
+          >Web<span class="logo-text-footer">Studio</span></a
+        >
+        <p class="quote-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
