--- a/index.html
+++ b/index.html
@@ -68,30 +68,30 @@
       </section>
       <section class="features">
         <div class="container">
-          <h2 class="features-header">About Us</h2>
+          <h2 class="visually-hidden features-header">About Us</h2>
           <ul class="ul-features">
-            <li>
+            <li class="features-desc">
               <h3 class="features-list">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-desc">
               <h3 class="features-list">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features-desc">
               <h3 class="features-list">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-desc">
               <h3 class="features-list">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
