--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </section>
       <section class="features">
         <div class="container">
-          <h2 class="visually-hidden features-header">About Us</h2>
+          <h2 class="visually-hidden">About Us</h2>
           <ul class="ul-features">
             <li class="features-desc">
               <h3 class="features-list">Strategy</h3>
@@ -172,7 +172,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="cashless-payment"
@@ -184,7 +184,7 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/meditation-app.jpg"
                 alt="meditation-app"
@@ -196,7 +196,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/taxi-service.jpg"
                 alt="taxi-service"
@@ -208,7 +208,7 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="screen-illustration"
@@ -220,7 +220,7 @@
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/online-courses.jpg"
                 alt="online-courses"
